Fixed Bug with campground distance filter, now iterating through the campgrounds in reverse to avoid early termination and skipping due to indices shifting with splice() String method

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -173,7 +173,9 @@ i {
 #searchFilter input[type="button"] {
   display: inline;
 }
-
+.filterResultsMsg {
+  background-color: lightgreen;
+}
 /** /Campgrounds **/
 .public-cg {
   background-color: #888;
